--- a/hml-ex1-master/index.html
+++ b/hml-ex1-master/index.html
@@ -9,25 +9,45 @@
 
         <div class="title">
             <h1>Cocaína Apreendida Com Valor Superior 210M€</h1>
-            <hr width="50%">
+            <hr id="linha-titulo">
         </div>
         
         <div>
-            <p>A Polícia Judiciária, numa operação conjunta com o Cuerpo Nacional de Policia de Espanha, apreendeu "um total de 183 fardos de cocaína com um peso bruto total estimado que ascende a cerca de 5,2 toneladas".</p>
+            <p style="margin-top: 25px; width: 50%; margin-left: auto; margin-right: auto; text-align: justify; font-size: 20px;">A Polícia Judiciária, numa operação conjunta com o Cuerpo Nacional de Policia de Espanha, apreendeu "um total de 183 fardos de cocaína com um peso bruto total estimado que ascende a cerca de 5,2 toneladas".</p>
+            <figure>
+                <img src="coca.jpg" style="height: 300px; width: 50%; display: block; margin-left: auto; margin-right: auto; margin-top: 25px;">
+                <figcaption style=" margin-left: 25%; margin-top: 10px; font-size: 16px;"><b>Cocaína Apreendida pela PJ (Polícia Judiciária)</b></figcaption>
+            </figure>
         </div>
 
-        <div id="texto-1">
+        <div style="margin-top: 25px; width: 50%; margin-left: auto; margin-right: auto; text-align: justify; font-size: 20px;">
             <p>Trata-se da "maior apreensão deste tipo de estupefaciente realizada em Portugal nos últimos 15 anos e uma das maiores realizadas em toda a Europa", segundo a Polícia Judiciária. A quantidade de cocaína apreendida valeria no mínimo 210 milhões de euros.</p>
+            <p style="margin-top: 25px;">Nos últimos dias, as duas polícias conseguiram localizar e intercetar, em pleno Oceano Atlântico, um veleiro com cerca de 24 metros de comprimento que estava a ser utilizado no transporte de elevada quantidade de cocaína.</p>
         </div>
 
-        <div id="texto-2">
-            <P>Nos últimos dias, as duas polícias conseguiram localizar e intercetar, em pleno Oceano Atlântico, um veleiro com cerca de 24 metros de comprimento que estava a ser utilizado no transporte de elevada quantidade de cocaína.</P>
+        <figure>
+            <img src="dae.jpg" style="height: 300px; width: 50%; display: block; margin-left: auto; margin-right: auto; margin-top: 25px;">
+            <figcaption style="margin-left: 25%; margin-top: 10px; font-size: 16px;"><b>DAE (Destacamento de Ações Especiais)</b></figcaption>
+        </figure>
+
+        <p style="margin-top: 25px; width: 50%; margin-left: auto; margin-right: auto; text-align: justify; font-size: 20px;">Para além da droga apreendida, foram também detidos três homens, todos estrangeiros, "sobre os quais recaem fortes suspeitas de integrarem que uma poderosa organização criminosa transnacional dedicada ao tráfico de grandes quantidades de cocaína entre a América Latina e o Continente Europeu". Os detidos serão presentes à autoridade judiciária competente para primeiro interrogatório e aplicação de medidas de coação.</p>
+        <p style="margin-top: 25px; width: 50%; margin-left: auto; margin-right: auto; text-align: justify; font-size: 20px;">Em comunicado, a Polícia Judiciária adianta que a droga apreendida era destinada a ser distribuída na Europa, sendo que o ponto de entrada seria a zona costeira da Península Ibérica.</p>
+
+        <p style="margin-top: 25px; width: 50%; margin-left: auto; margin-right: auto; text-align: justify; font-size: 20px;">A operação contou com as seguintes forças policiais:</p>
+        
+        <ul style="margin-left: auto; margin-right: auto;">
+            <li style="margin-left: 30%; margin-top: 10px; font-size: 17px;"><a href="#" style="text-decoration: none; color: #000000;">Polícia Judiciária</a></li>
+            <li style="margin-left: 30%; margin-top: 10px; font-size: 17px;"><a href="#" style="text-decoration: none; color: #000000;">Unidade Nacional de Combate ao Tráfico de Estupefacientes</a></li>
+            <li style="margin-left: 30%; margin-top: 10px; font-size: 17px;"><a href="#" style="text-decoration: none; color: #000000;">Unidad de Drogas y Crimen Organizado do Cuerpo Nacional de Policia de Espanha</a></li>
+            <li style="margin-left: 30%; margin-top: 10px; font-size: 17px;"><a href="#" style="text-decoration: none; color: #000000;">Marinha</a></li>
+            <li style="margin-left: 30%; margin-top: 10px; font-size: 17px;"><a href="#" style="text-decoration: none; color: #000000;">Força Aérea</a></li>
+            <li style="margin-left: 30%; margin-top: 10px; font-size: 17px;"><a href="#" style="text-decoration: none; color: #000000;">Maritime Analysis and Operations Centre – Norcotics (MAOC-N)</a></li>
+            <li style="margin-left: 30%; margin-top: 10px; font-size: 17px;"><a href="#" style="text-decoration: none; color: #000000;">Drug Enforcement Administration (DEA)</a></li>
+            <li style="margin-left: 30%; margin-top: 10px; font-size: 17px;"><a href="#" style="text-decoration: none; color: #000000;">National Crime Agency</a></li>
+        </ul>
+
+        <div id="footer" style="height: 75px; margin-top: 50px; background-color: #141414;">
+            <p style="text-align: center; color: #ffffff; line-height: 75px;  font-family: 'Roboto Slab', serif; letter-spacing: 2px;"> © Todos os Direitos Reservados, Rodrigo Almeida, Nº 120711, T604</p>
         </div>
-
-        <P>Para além da droga apreendida, foram também detidos três homens, todos estrangeiros, "sobre os quais recaem fortes suspeitas de integrarem que uma poderosa organização criminosa transnacional dedicada ao tráfico de grandes quantidades de cocaína entre a América Latina e o Continente Europeu". Os detidos serão presentes à autoridade judiciária competente para primeiro interrogatório e aplicação de medidas de coação.</p>
-        <p>Em comunicado, a Polícia Judiciária adianta que a droga apreendida era destinada a ser distribuída na Europa, sendo que o ponto de entrada seria a zona costeira da Península Ibérica.</p>
-        <p>Esta foi uma operação conjunta da Polícia Judiciária, através da Unidade Nacional de Combate ao Tráfico de Estupefacientes, com a Unidad de Drogas y Crimen Organizado do Cuerpo Nacional de Policia de Espanha e com a participação da Marinha e da Força Aérea. E contou também com o apoio e participação do Maritime Analysis and Operations Centre – Norcotics (MAOC-N), com sede em Lisboa, da Drug Enforcement Administration (DEA) dos Estados Unidos da América e da National Crime Agency do Reino Unido.</p>
-
-        <img src="xtense.jpg" width="250", height="250">
     </body>
 </html>
